--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
    <p>Films encourage us to take action. Our favourite characters, superheroes, teach us life lessons. They give us ideas and 
     inspiration to do everything for the better instead of just sitting around, waiting for things to go their way</p>
 
-
+<img src="./../87655651.webp" alt="">
 
 </body>
 </html>
