--- a/movies.html
+++ b/movies.html
@@ -16,7 +16,7 @@
         <li><a href="./movies.html">Movies</a></li>
     </ul>
 
-
+<img src="../download.jpg" alt="">
     <h2><a href="https://www.imdb.com">IMDB</a></h2>
 
     <p>IMDB is the world's most popular and authoritative source for movie, TV and celebrity content. Find ratings and reviews for 
